# browser_tamagochi

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.C8A06EB379F2D751.idx
include/: bubble.h  constants.h  main_app.h  player.h  timer.h
src/: bubble.cpp  main.cpp  main_app.cpp  player.cpp
